--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -216,6 +216,7 @@ hr {
     <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-523'>SPARK-523</a>] - Added support for chat and email options in contact tooltips.</li>
     <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-524'>SPARK-524</a>] - Spark now shows full address of conference room.</li>
     <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-528'>SPARK-528</a>] - Message history is now grouped by Day, Month, Year.</li>
+    <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-531'>SPARK-531</a>] - Added the new "Buzz" feature, which allows users to give others a little nudge.</li>
 </ul>
 
 <h3>Bug Fixes</h3>
