Update translator project.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7033 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/translator/changelog.html
+++ b/src/plugins/translator/changelog.html
@@ -43,6 +43,10 @@
 <h1>
 Translator Spark plug Changelog
 </h1>
+<p><b>1.3</b> -- February 7th, 2007</p>
+<ul>
+    <li>Fixed issue with Spark 2.5 Beta and Higher</li>
+</ul>
 
 <p><b>1.0.1</b> -- September 19th, 2006</p>
 <ul>
