--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -179,6 +179,49 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.5.0 Beta 3 -- <span style="font-weight: normal;">February 15th, 2007</span></h2>
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-255'>SPARK-255</a>] - Added drag and drop contacts into conference rooms to invite.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-452'>SPARK-452</a>] - Added IRC-Style Shortcuts</li>
+</ul>
+
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-314'>SPARK-314</a>] - Fixed Apple-W to close a chat tab/window.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-376'>SPARK-376</a>] - Fixed problem with usernames with characters like \ / : * ? " < > | in their name.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-455'>SPARK-455</a>] - Fixed auto away issue on linux.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-456'>SPARK-456</a>] - Fix issue with links in send area.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-463'>SPARK-463</a>] - Fixed issue with spaces in gateway contact names.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-472'>SPARK-472</a>] - Fixed double messages with broadcasts.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-478'>SPARK-478</a>] - Fixed issue with losing conference invitations after Spark reconnects.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-481'>SPARK-481</a>] - Fixed reconnect issue with idle.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-486'>SPARK-486</a>] - Timestamps are no correct when running on Vista.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-487'>SPARK-487</a>] - Users can now send screen shots when running Spark on Vista</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-488'>SPARK-488</a>] - Fixed file transfer on Vista</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-500'>SPARK-500</a>] - Fixed gateway presence change when user is disconnected causes Spark crash.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-501'>SPARK-501</a>] - Fixed Ctrl+F issue on OSX.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-502'>SPARK-502</a>] - Turned off DTD validation in EmoticonManager.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-503'>SPARK-503</a>] - Fixed grin emoticon not showing issue.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-509'>SPARK-509</a>] - Fixed multiple presences being sent issue on VCard change.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-511'>SPARK-511</a>] - No longer put users in invalid conference room.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-532'>SPARK-532</a>] - Spark now alert users when there is no program associated with a file a user is trying to open after File Transfer.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-534'>SPARK-534</a>] - Linux build is no longer  corrupted.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-535'>SPARK-535</a>] - Spark no longer validates DTD for Emoticons.plist.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-536'>SPARK-536</a>] - MSI files now contain the Spark.exe file.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-537'>SPARK-537</a>] - Added a universal binary of the JavaApplicationStub for Spark.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-538'>SPARK-538</a>] - Fastpath auto-logs in after disconnect.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-540'>SPARK-540</a>] - Improved error message on login failure.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-542'>SPARK-542</a>] - HTTPS Proxy is now working.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-543'>SPARK-543</a>] - Notifications can now be disabled.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-544'>SPARK-544</a>] - Roster window shows nickname option if specified in Profile.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-545'>SPARK-545</a>] - Clearing avatar takes immeditate effect.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-546'>SPARK-546</a>] - Chat History now shows approriate nicknmes when possible.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-549'>SPARK-549</a>] - [Mac] Starting new conversations no longer fails to bring the message window to the front</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-550'>SPARK-550</a>] - Fixed notification issue with tray popups and bring to front.</li>
+</ul>
+
+
 <h2>2.5.0 Beta 2 -- <span style="font-weight: normal;">February 6th, 2007</span></h2>
 
 <h3>New Features</h3>
