Update changelog and readme.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7443 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -179,6 +179,38 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.5.0 Beta 4 -- <span style="font-weight: normal;">March 9th, 2007</span></h2>
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-2'>SPARK-2</a>] - Now show status of offline users.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-382'>SPARK-382</a>] - Added ctrl+e to display last 10 conversations.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-410'>SPARK-410</a>] - Now all plugins to be operating-system specific</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-559'>SPARK-559</a>] - Refactored ContactList, ContactGroup and ContactItem to allow all event operations to run through the ContactList itself.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-561'>SPARK-561</a>] - Added new tray notification for incoming fastpath chat requests.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-567'>SPARK-567</a>] - Added Pack200 support to lower the overall deployment size of Spark.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-568'>SPARK-568</a>] - Added typing notification for Fastpath Conference chats.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-571'>SPARK-571</a>] - Added client to client VOIP support.</li>
+</ul>
+
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-453'>SPARK-453</a>] - Linux distribution no longer depends on the windows dir.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-471'>SPARK-471</a>] - Fixed presence issue inside chat rooms.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-510'>SPARK-510</a>] - Conference Invitation page needs UI improvements.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-551'>SPARK-551</a>] - Handle gateway jids and adding of gateway users more gracefully.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-552'>SPARK-552</a>] - Added new error handling UI for Soft Phone.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-553'>SPARK-553</a>] - Presence now changes back to normal presence when hanging up phone call.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-554'>SPARK-554</a>] - Opening of a chat room now hides contact tooltip.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-555'>SPARK-555</a>] - Usernames with escapeable characters are now handled correctly in history.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-556'>SPARK-556</a>] - VCardManager now caches invalid vCards to prevent network abuse. </li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-557'>SPARK-557</a>] - Soft Phone only loads vCards if the user is registered.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-558'>SPARK-558</a>] - IRC-Style Shortcuts are now displayed in history.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-565'>SPARK-565</a>] - Users are now notified that they need to reconnect to a conference room when disconnected.</li>
+</ul>
+
+
+
+
 <h2>2.5.0 Beta 3 -- <span style="font-weight: normal;">February 15th, 2007</span></h2>
 <h3>New Features</h3>
 <ul>
