Updating for 2.5.0 release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7840 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/README.html
+++ b/documentation/README.html
@@ -166,11 +166,11 @@ hr {
 <table boder=0>
 <tr>
 	<td align="right">version:</td>
-	<td><b>2.5.0 Beta 4</b></td>
+	<td><b>2.5.0</b></td>
 </tr>
     <tr>
 	<td align="right">released:</td>
-	<td><b>March 9th, 2007</b></td>
+	<td><b>March 30th, 2007</b></td>
 </tr>
 </table>
 
@@ -182,7 +182,7 @@ Thank you for choosing Spark!
 Spark is a full-features instant messaging (IM) and groupchat client that uses the
 XMPP protocol.
 <p>
-Further information can be found on the <a href="http://www.jivesoftware.org/spark">
+Further information can be found on the <a href="http://www.igniterealtime.org/projects/spark">
 Spark website</a>.
 
 <h2>Changelog</h2>
@@ -193,9 +193,9 @@ last release.
 <h2>Support</h2>
 
 Free support is provided by the Spark community in the
-<a href="http://www.jivesoftware.org/forums">online forums</a>. Commercial
+<a href="http://www.igniterealtime.org/forum/forum.jspa?forumID=49">online forums</a>. Commercial
 support (email and phone) from Jive Software is
-<a href="http://www.jivesoftware.com/products/spark">also available</a>.
+<a href="http://www.jivesoftware.com/products/spark/">also available</a>.
 
 <h2>License Agreements</h2>
 
