Update for release of Spark 2.5.1 beta 1 release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7943 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -179,6 +179,35 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.5.1 Beta 1 -- <span style="font-weight: normal;">April 9th, 2007</span></h2>
+
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-2'>SPARK-2</a>] - Show offline status information</li>
+</ul>
+
+
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-623'>SPARK-623</a>] - Fixed error when trying to establish a voice communication.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-633'>SPARK-633</a>] - Fixed screenshot issue on Linux.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-644'>SPARK-644</a>] - Fixed timing issue with Jingle calls and UI.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-645'>SPARK-645</a>] - Fix tab switching issue on Mac.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-647'>SPARK-647</a>] - Fixed growl issue on Mac.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-649'>SPARK-649</a>] - Fixed screenshot tool on Mac.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-650'>SPARK-650</a>] - Improved descriptive text for Jingle calls.s</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-652'>SPARK-652</a>] - Fixed issue with missing icon when viewing plugin information.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-654'>SPARK-654</a>] - Fixed issue registering soft phone on Mac.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-655'>SPARK-655</a>] - Fixed buzz icon and placement</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-656'>SPARK-656</a>] - Installer is now adding desktop shortcuts.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-658'>SPARK-658</a>] - Added in missing emoticons.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-660'>SPARK-660</a>] - Emoticon packs can now be unzipped without admin rights.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-668'>SPARK-668</a>] - Fixed issue where first message would be dropped.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-673'>SPARK-673</a>] - Fixed logic with update checker and beta/alpha releases.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-681'>SPARK-681</a>] - Spark now  closes a Jingle Session if it establish and don't receive media for more than X(20) seconds</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-689'>SPARK-689</a>] - Fixed jingle binding issue on Vista.</li>
+</ul>
+
 <h2>2.5.0 -- <span style="font-weight: normal;">March 30th, 2007</span></h2>
 
 <h3>New Features</h3>
