Updated readme and change log.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8082 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/README.html
+++ b/documentation/README.html
@@ -166,11 +166,11 @@ hr {
 <table boder=0>
 <tr>
 	<td align="right">version:</td>
-	<td><b>2.5.0</b></td>
+	<td><b>2.5.2 Beta 1</b></td>
 </tr>
     <tr>
 	<td align="right">released:</td>
-	<td><b>March 30th, 2007</b></td>
+	<td><b>April 20th, 2007</b></td>
 </tr>
 </table>
 
