--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -179,6 +179,41 @@ hr {
 
 <div id="pageBody">
 
+
+<h2>2.5.2 Beta 1 -- <span style="font-weight: normal;">April 20th, 2007</span></h2>
+
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-399'>SPARK-399</a>] - Added color randomizer for user names in group chat rooms.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-609'>SPARK-609</a>] - Added new Conference Invitation UI.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-674'>SPARK-674</a>] - Added RTP Media Listening for jingle, improving connectivity check.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-691'>SPARK-691</a>] - Improved UI for contact list groups.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-701'>SPARK-701</a>] - Added Japanese translation.</li>
+</ul>
+
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-2'>SPARK-2</a>] - Spark now displays offline status messages.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-401'>SPARK-401</a>] - Added better error handling during MUC creation.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-598'>SPARK-598</a>] - Fixed issue with upgrades and MSI builds.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-626'>SPARK-626</a>] - Fixed issue with missing jars from the classpath in Linux.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-659'>SPARK-659</a>] - Socks5 proxy now uses specified username and password.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-661'>SPARK-661</a>] - Updated Italian translation.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-664'>SPARK-664</a>] - Add beta releases to the upgrade notification system</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-665'>SPARK-665</a>] - Changed update check to check only once a week and not on every log in.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-666'>SPARK-666</a>] - Fixed file transfer on Mac.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-669'>SPARK-669</a>] - Fixed issue with VCard info showing up for the wrong contact.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-679'>SPARK-679</a>] - Improved notification when user comes online.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-682'>SPARK-682</a>] - Dialing an invalid number is now handled properly by Spark.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-693'>SPARK-693</a>] - Fixed buzz icon tooltip.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-714'>SPARK-714</a>] - Fixed issue with SparkPhone opening 2 Phone Panel after several registration fails and many disconnections</li>
+</ul>
+
+<h2>2.5.1 -- <span style="font-weight: normal;">April 14th, 2007</span></h2>
+
+<h3>No Changes.</h3>
+
+
 <h2>2.5.1 Beta 1 -- <span style="font-weight: normal;">April 9th, 2007</span></h2>
 
 <h3>New Features</h3>
