Updating for release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8290 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -18,7 +18,7 @@ body, td, th {
 }
 
 pre, tt, code {
-    font-family: courier new, monospaced;
+    font-family: courier new, monospaced
     font-size: 9pt;
 }
 
@@ -178,6 +178,56 @@ hr {
 </div>
 
 <div id="pageBody">
+<h2>2.5.3 Beta 1 -- <span style="font-weight: normal;">May 11th, 2007</span></h2>
+
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-111'>SPARK-111</a>] - Users can now select contact items from multiple groups, which allows for better broadcast handling.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-662'>SPARK-662</a>] - Add new emoticons to default emoticon pack.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-725'>SPARK-725</a>] - Added Single Sign-ON (SSO) support.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-727'>SPARK-727</a>] - Added new Spark Users Guide</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-729'>SPARK-729</a>] - Skin: Added option for SSO boolean. If selected Spark just tries to connect to the given server as an SSO situation.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-735'>SPARK-735</a>] - Added integrated sso - smack code into Spark.</li>
+</ul>
+
+<h3>Bugs</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-718'>SPARK-718</a>] - Fixed small asterisk-IM issue.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-732'>SPARK-732</a>] - Fixed conference room participant list issue when renaming nickname.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-742'>SPARK-742</a>] - Jingle now uses preffered codec.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-746'>SPARK-746</a>] - Fixed issue with Update checker not updating users from beta to release.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-748'>SPARK-748</a>] - Fixed CTRL+F issue handling multiple matching nicknames.</li>
+</ul>
+
+<h2>2.5.2 -- <span style="font-weight: normal;">May 3rd, 2007</span></h2>
+
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-2'>SPARK-2</a>] - Spark now display offline status information.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-399'>SPARK-399</a>] - Added new color randomizer for user names in group chat rooms.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-401'>SPARK-401</a>] - Added better error handling during conference room creation.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-609'>SPARK-609</a>] - Added a new Conference invitation ui.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-661'>SPARK-661</a>] - Updated the  Italian translation.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-664'>SPARK-664</a>] - Added beta release support to the upgrade notification system.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-665'>SPARK-665</a>] - Change update checks to weekly.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-674'>SPARK-674</a>] - Added RTP Media Listening for jingle, improving connectivity check.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-679'>SPARK-679</a>] - Improved notifications when user comes online/offline.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-691'>SPARK-691</a>] - Improved UI for contact list groups.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-701'>SPARK-701</a>] - Added Japanese translation.</li>
+</ul>
+
+<h3>Bugs</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-598'>SPARK-598</a>] - MSI now supports automatic upgrades.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-626'>SPARK-626</a>] - Added in missing jars to classpath on linux.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-659'>SPARK-659</a>] - Socks5 proxy not uses the username and password.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-666'>SPARK-666</a>] - Fixed file transfer timeout issue.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-669'>SPARK-669</a>] - Fixed issue with invalid title showing up in contact info.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-682'>SPARK-682</a>] - Dialing an invalid number is now handled properly by Spark</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-693'>SPARK-693</a>] - Changed the buzz icon tool tip.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-704'>SPARK-704</a>] - Users are now able to create new conference rooms when using limited permissions for Group Chat.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-714'>SPARK-714</a>] - SparkPhone handles registration failures properly.</li>
+</ul>
 
 
 <h2>2.5.2 Beta 1 -- <span style="font-weight: normal;">April 20th, 2007</span></h2>
