--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,6 +178,17 @@ hr {
 </div>
 
 <div id="pageBody">
+<h2>2.5.3 Beta 2 -- <span style="font-weight: normal;">May 28th, 2007</span></h2>
+
+<h3>Bugs</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-748'>SPARK-748</a>] - Ctrl-f does not pick up different users with same contact name.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-753'>SPARK-753</a>] - FRAME_IMAGE not found</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-757'>SPARK-757</a>] - Upgrade smack to fix SRV DNS issue in SASL.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-758'>SPARK-758</a>] - Spark needs to send messages to full jid on opening of chat room.</li>
+</ul>
+
+
 <h2>2.5.3 Beta 1 -- <span style="font-weight: normal;">May 11th, 2007</span></h2>
 
 <h3>New Features</h3>
