Update readme and changelog for release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8541 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,6 +178,18 @@ hr {
 </div>
 
 <div id="pageBody">
+<h2>2.5.4 Beta 1 -- <span style="font-weight: normal;">June 11th, 2007</span></h2>
+<h3>Bugs</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-759'>SPARK-759</a>] - Fixed File transfer issue on Mac OSX.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-763'>SPARK-763</a>] - Moving all native code to plugin for better linux support.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-766'>SPARK-766</a>] - One to one conversation in group chat room always sending to same  user.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-770'>SPARK-770</a>] - Need to fix minor i18n German translation issues.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-771'>SPARK-771</a>] - Multiple offline contacts showing up in roster after reconnection.</li>    
+</ul>
+
+
+
 <h2>2.5.3 Beta 2 -- <span style="font-weight: normal;">May 28th, 2007</span></h2>
 
 <h3>Bugs</h3>
