Update changelog and readme.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8870 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,6 +178,24 @@ hr {
 </div>
 
 <div id="pageBody">
+<h2>2.5.5 -- <span style="font-weight: normal;">August 5th, 2007</span></h2>
+<h3>Bugs</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-719'>SPARK-719</a>] - Fixed communication time in Phone.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-755'>SPARK-755</a>] - Fixed Spark crash after login with latest jvm build 1.6.0_01-b06</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-773'>SPARK-773</a>] - Fixed file transfer issue after reconnection.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-774'>SPARK-774</a>] - Fixed search service issue after reconnection.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-781'>SPARK-781</a>] - Fixed one to one conversation in group chat room using a single user.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-782'>SPARK-782</a>] - Fixed system tray not appearing on certain users computers.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-784'>SPARK-784</a>] - Update spanish translation file.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-786'>SPARK-786</a>] - Updated the italian translation.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-790'>SPARK-790</a>] - Fixed toaster not timing with Fastpath notifications.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-793'>SPARK-793</a>] - Fixed bookmarks causing NPE on room discovery.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-797'>SPARK-797</a>] - Spark should not show presence updates in chat window if the user is still online.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-798'>SPARK-798</a>] - Fixed chat window not opening when Timer is cancelled.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-800'>SPARK-800</a>] - Increased File Transfer timeout time.</li>
+</ul>
+
 <h2>2.5.4 Beta 1 -- <span style="font-weight: normal;">June 11th, 2007</span></h2>
 <h3>Bugs</h3>
 <ul>
