Refactoring System Tray
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8933 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/linux/changelog.html
+++ b/src/plugins/linux/changelog.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>TransferGuard Spark Plug Log</title>
+	<title>System Tray For Spark</title>
     <style type="text/css">
         BODY {
             font-size : 100%;
@@ -41,7 +41,7 @@
 <body>
 
 <h1>
-Linux Plugin Change Log
+System Tray Plugin Change Log
 </h1>
 
 <p><b>1.0.0</b> -- August 10th, 2007</p>
