--- a/src/plugins/linux/readme.html
+++ b/src/plugins/linux/readme.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Linux Spark Plug Readme</title>
+	<title>System Tray Spark Plug Readme</title>
     <style type="text/css">
         BODY {
             font-size : 100%;
@@ -51,7 +51,7 @@
 <body>
 
 <h1>
-Linux Plugin Readme
+System Tray Plugin Readme
 </h1>
 
 <h2>Overview</h2>
